refactor: Refactor package structure for better organization and clarity